--- a/src/css/main.css
+++ b/src/css/main.css
@@ -1,6 +1,9 @@
 @font-face {
   font-family: 'Gotham-Bold' 'Roboto', sans-serif;
-  src: url("fonts/Gotham-Bold.woff") format("woff"); }
+  src: url("fonts/Gotham-Bold.woff") format("woff");
+  src: url("fonts/Campton-BoldDEMO.eot") format("eot");
+  src: url("fonts/Campton-BoldDEMO.woff") format("woff");
+  src: url("fonts/Campton-BoldDEMO.woff2") format("woff2"); }
 
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
